# LagrangeProject

./: .gitignore
deep-learning/: README.md  linear_regression.py  softmax_regression.py  test.py
pcl_tutorial/: CMakeLists.txt  README.md  concave_hull_2d  concave_hull_2d.cpp  extract_indices  extract_indices.cpp  kdtree_search  kdtree_search.cpp  make.sh  matrix_transform  matrix_transform.cpp  normal.cpp  normal_estimation_using_integral_images.cpp  normal_integral_image  normal_test  octree_search  octree_search.cpp  passthrough  passthrough.cpp  pfh_feature.cpp  project_inliers  project_inliers.cpp  remove_outliers  remove_outliers.cpp  resampling  resampling.cpp  statistical_removal  statistical_removal.cpp  table_scene_lms400_downsampled.pcd  table_scene_lms400_normal.pcd  voxel_grid  voxel_grid.cpp
